<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".core.MainActivity">

    <LinearLayout
        android:id="@+id/setup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_main">

        <TextView
            android:id="@+id/setup_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_title"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            android:paddingBottom="@dimen/spacing_xl" />

        <TextView
            android:id="@+id/setup_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_description_autosync"
            android:paddingBottom="@dimen/spacing_xl" />

        <Button
            android:id="@+id/notification_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/button_padding_horizontal"
            android:paddingVertical="@dimen/button_padding_vertical"
            android:layout_marginBottom="@dimen/spacing_sm" />

        <Button
            android:id="@+id/usage_stats_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/button_padding_horizontal"
            android:paddingVertical="@dimen/button_padding_vertical"
            android:layout_marginBottom="@dimen/spacing_sm" />

        <Button
            android:id="@+id/write_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/button_padding_horizontal"
            android:paddingVertical="@dimen/button_padding_vertical"
            android:layout_marginBottom="@dimen/spacing_sm" />

        <Button
            android:id="@+id/setup_accessibility_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/button_padding_horizontal"
            android:paddingVertical="@dimen/button_padding_vertical"
            android:layout_marginBottom="@dimen/spacing_sm" />

        <Button
            android:id="@+id/setup_battery_opt_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable_battery_optimization"
            android:paddingHorizontal="@dimen/button_padding_horizontal"
            android:paddingVertical="@dimen/button_padding_vertical"
            android:layout_marginBottom="@dimen/spacing_sm" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_complete"
            android:paddingHorizontal="@dimen/button_padding_horizontal"
            android:paddingVertical="@dimen/button_padding_vertical" />

    </LinearLayout>

</ScrollView>
